
Release 5.2.1 (unreleased)
==========================

Bug fixes
---------

- Fix face external force projection with tensorial diffusion
  and porous models 1, 2.
  This was impacting cases with head losses, improved pressure interpolation,
  and scalar or tensorial volume porosity models (iporos=1, 2).

- Fix Python 3 integer divison issues for code-code coupling process count
  distribution and batch duration conversions.

- Fix missing handling of isotropic mesh viscosity for ALE restart.

- Fix in severe accident (mass source terms for metal modelling).

- Major Fix: change the computation of the RHS for pressure.
  The form is back to the one before a1bed6b "div(rho u* +dt grad P^n)".
  Commit a1bed6b could introduced "big" terms if user momentum source
  terms were added. The new form takes Rhie & Chow and terms comming from
  the improved hydrostatic pressure into account (contrary to the former
  form) and also all mass source terms (this part is merged).

- Fix crash in some polygon triangulation cases.

- Fix incorrect GUI-defined DOF locking for coupling with code_aster.

- Fix incorrect access to per-scalar density in some cases.

- Fix error on unconverged linear solver using PETSc.

- Fix in weakly compressible algorithm for scalar diffusion terms when
  multiple scalars are present.

- Fix empty mesh in error postprocessing for linear solvers.

- Fix for possible bug in postprocessing edges mesh extraction.

- Fix for OpenMP multigrid-preconditioned Conjugate Gradient convergence issue.
  This requires using a flexible variant of the Conjugate Gradient when
  using a Gauss-Seidel smoother with multiple threads.

- Fix spurious mapping of previous mass flux with order 1 in time scheme.

- Fix pressure drop by zone computation (gravity term twice multiplied by
  density at outlet boundary).

- Lagrangian module: fix particle flow rate per class reporting in listing file
  (GitHub issue #4).
